alignment fixes
alignment fixes

--- a/hayagreeva/css/home.css
+++ b/hayagreeva/css/home.css
@@ -71,7 +71,7 @@
     background-color: #6290bf;
     border-radius: 21px;
     height: 40px;
-    padding: 8px 13px;
+    padding: 8px 28px;
     width: 250px;
 }
 .card {
@@ -132,15 +132,16 @@ img.card-img-top {
     border-radius: 27px;
 }
 .icon {
-    margin: 12px;
+    margin: 11px 0 0px -10px;
     color: white;
 }
 .services-text{
     color:#21cbbb;
 }
 
-.our-services-content{
-    margin:20px;
+.col-md-3.our-services-content {
+    height: 180px;
+    width: 270px;
 }
 img.about-us-img {
     width: 90%;
@@ -159,9 +160,7 @@ img.about-us-img {
     height:60%;
     position: sticky;
 }
-.our-services-body {
-    margin-top: 15%;
-}
+
 .fill {
     display: flex;
     justify-content: center;
@@ -170,4 +169,27 @@ img.about-us-img {
 }
 .view-more-btn {
     margin: 0 38%;
+}
+
+.carousel-caption{
+    background-color: #261f1f40
+}
+
+.card-coustum {
+    height: 170px;
+    width: 250px;
+}
+.container-fluid.ourServices {
+    margin: 10% 0px;
+}
+.about-us-card{
+box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+margin: 15px;
+height: 45%;
+}
+.container-fluid.about-us {
+    margin: 8% 0px;
+}
+.row.card-content {
+    margin: 4px;
 }
